# Bodhi-AI

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: BRANDING_SYSTEM.md
docs/development/: DUAL_STARTUP_MODES.md
docs/release/: MIGRATION_v0.3.0.md
docs/reports/: PROJECT_ANALYSIS.md
e2e/: README.md  global-setup.ts
e2e-backend/src/: main.rs
scripts/: check-macos-signing-env.sh  clean_data.fish  clean_data.sh  lotus-dist.cjs  rebrand-shell.cjs  run-e2e-tests.sh  self-sign-macos-app.sh  tauri-mode.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  lib.rs
src-tauri/src/command/: copy.rs
src-tauri/src/embedded/: mod.rs
src/app/: App.tsx
src/app/__tests__/: AppSetupFlow.test.tsx
src/components/QuestionDialog/: QuestionDialog.tsx
src/hooks/: useAgentEventSubscription.ts
src/hooks/__tests__/: useAgentEventSubscription.test.tsx
src/pages/ChatPage/components/ChatItem/: index.tsx
src/pages/ChatPage/components/ChatSidebar/: ChatSidebarDateGroups.tsx  ChatSidebarFooter.tsx  index.tsx  useChatSidebarState.ts
src/pages/ChatPage/components/ChatView/: ActiveToolMessageCard.tsx  ChatInputArea.tsx  ChatMessagesList.tsx  SubSessionsPanel.tsx  index.tsx  styles.css  useChatViewMessages.ts
src/pages/ChatPage/components/CommandSelector/: index.tsx  useCommandSelectorState.ts
src/pages/ChatPage/components/ImageGrid/: index.tsx
src/pages/ChatPage/components/InputContainer/: index.tsx  useInputContainerCommand.ts  useInputContainerSubmit.ts
src/pages/ChatPage/components/MessageCard/: MessageCardContent.tsx  messageCardFormatters.ts  useMessageCardActions.tsx
src/pages/ChatPage/components/MessageInput/: MessageInputControlsRight.tsx  MessageInputFooter.tsx  index.tsx
src/pages/ChatPage/components/MultiPaneChatView/: index.tsx
src/pages/ChatPage/components/SystemMessageCard/: index.tsx
src/pages/ChatPage/components/SystemPromptSelector/: index.tsx
src/pages/ChatPage/components/ToolCallCard/: index.tsx
src/pages/ChatPage/components/ToolResultCard/: index.tsx
src/pages/ChatPage/components/ToolSessionCard/: index.tsx
src/pages/ChatPage/components/WorkflowResultCard/: index.tsx
src/pages/ChatPage/components/__tests__/: ChatViewScrollButtons.test.tsx  SystemPromptSelector.test.tsx
src/pages/ChatPage/hooks/useChatManager/: openAiMessageMapping.ts  useChatOperations.ts  useChatTitleGeneration.ts  useMessageStreaming.test.tsx  useMessageStreaming.ts
src/pages/ChatPage/services/: FileOperationsService.ts
src/pages/ChatPage/store/: index.ts
src/pages/ChatPage/store/slices/: chatSessionSlice.test.ts  chatSessionSlice.ts
src/pages/ChatPage/types/: chatMessages.ts
src/pages/ChatPage/utils/: chatUtils.ts  defaultSystemPrompts.ts  mcpAlias.ts  openSession.ts
src/pages/SettingsPage/components/ProviderSettings/: index.tsx
src/pages/SettingsPage/components/SystemSettingsPage/: SystemSettingsAppTab.tsx  SystemSettingsKeywordMaskingTab.tsx  SystemSettingsMcpTab.tsx  SystemSettingsSchedulesTab.tsx  SystemSettingsSessionsTab.tsx  index.tsx
src/pages/SettingsPage/components/SystemSettingsPage/__tests__/: SystemSettingsKeywordMaskingTab.test.tsx
src/pages/SettingsPage/components/SystemSettingsPage/mcp/: McpToolList.tsx
src/services/api/: client.ts
src/services/chat/: AgentService.ts  ModelService.ts
src/services/common/: ServiceFactory.ts
src/services/mcp/: McpService.ts  types.ts
src/services/mcp/__tests__/: McpService.test.ts
src/shared/components/JsonSchemaViewer/: index.tsx
src/shared/components/Markdown/: MarkdownCodeBlock.tsx
src/shared/components/StartupConfirmation/: index.tsx
src/shared/utils/: backendBaseUrl.ts  clipboard.ts  jsonSchema.ts
src/shared/utils/__tests__/: jsonSchema.test.ts
(+1 files in other folders)
