[package]
name = "copilot_chat"
version = "2026.3.3"
description = "A Tauri App"
authors = ["bigduu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "copilot_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Shared Bamboo engine dependency (managed at `bodhi/Cargo.toml` workspace level).
bamboo-agent = { workspace = true }

# Tauri core and plugins
tauri = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

async-stream = { workspace = true }

# Error Handling & Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and Debug
log = { workspace = true }
env_logger = { workspace = true }
tauri-plugin-log = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
zstd = { workspace = true }

crossbeam = { workspace = true }

# Utilities
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-process = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
portable-pty = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3"

once_cell = { workspace = true }

[features]
default = []
# Internal company features - only enable in company environment
internal = []

[dev-dependencies]
tempfile = { workspace = true }
